2022-12-04 0.22d
  * fixed memory leak in PostgreSQL API call
  * add missing lock slave list
  * fixed valgrind warning

2022-11-15 0.22c
  * fixed trigger pairing thread
  * fixed memory leaks

2022-11-06 0.22b
  * fixed slave mode: avoid reading local jobs
  * fixed typing error when deleting entries in index
  * fixed warnings
  * improved timeout messages
  * fixed print configuration error messages
  * fixed reading keys/certificates: after configuration
  * fixed write multiple configuration values
  * removed some debug code
  * BARControl: fixed update TLS state

2022-10-31 0.22a
  * disabled TLS port by default (TLS also work on
    standard port)
  * fixed/renamed archive meta field "scheduleUUID":
    become a unique entity UUID to be able to find all
    archive belonging to a backup set.
    Note: if needed, e. g. for re-import to the index,
    run the command 'convert' with new option
    --new-entity-uuid on the archives which belong to
    a single entity
  * support TLS connections to slaves
  * fixed option --job
  * fixed convert multiple archives
  * fixed add newest entry if no entry exists
  * bar-index: fixed clean orphaned
  * fixed rename entry on restore: use file name instead
    of path
  * fixed --transform: glob,regex,extended pattern types
  * fixed missing source parallel.c in source pckage,
    fixed linkage
  * fixed restart aborted job on slave (MACBAR-102)
  * fixed write change job data
  * fixed entities persistence move-to: avoid override
    existing archives, move to correct destination, auto
    rename destination archive if file already exists
  * fixed auto-index: skip macros in paths, termination
    condition
  * fixed continuous schedule: date+week days
  * fixed log message 'no server password set'
  * fixed TLS connections: reading certificates
  * fixed TLS connection certificates verification: send
    certificate chain, verify certifcates
  * added slave-tls-mode, slave-host-force-tls is now
    deprecated